--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ body section main a.header-novidades:hover{
 
 
 #novidades-hqs img{
-    width: 15vw;
+    width: 14vw;
     height: 40vh;
     margin: 0px 10px 0 10px;
     overflow: hidden;
@@ -226,27 +226,41 @@ body section main a.header-novidades:hover{
 }
 
 
-#novidades-hqs img:hover{
+/*#novidades-hqs img:hover{
     opacity: 1;
-    width: 20vw;
+    width: 18vw;
     height: 50vh;
     border: solid 8px #1a1a1a;
+}*/
+
+#novidades-hqs img:hover{
+    cursor: pointer;
+    opacity: 1;
+    transform: scale(1.3);
+    border: solid 8px #1a1a1a;
+    z-index: 99;
 }
+
+
 
 
 /* FOOTER */
 
-body footer div#footer-marvel {
+body section footer div#footer-marvel {
+    width: 100%;
     background: rgb(52,52,52);
     background: linear-gradient(rgba(23,23,23,1) 51%, rgba(52,52,52,1) 100%);
     display: flex;
     align-items: center;
-    box-shadow: 15px 15px 15px  15px;
+    position: absolute;
+    bottom: 0;
+    box-shadow: 0 0 15px 0;
 }
 
-body footer div p{
+body footer div a{
     font-family: cursive;
     margin-left: auto;
     margin-right: auto;
     color: white;
+    text-decoration: none;
 }
