--- a/css/style.css
+++ b/css/style.css
@@ -226,13 +226,6 @@ body section main a.header-novidades:hover{
 }
 
 
-#novidades-hqs img:hover{
-    opacity: 1;
-    width: 20vw;
-    height: 50vh;
-    border: solid 8px #1a1a1a;
-}
-
 
 /* FOOTER */
 
@@ -249,4 +242,38 @@ body footer div p{
     margin-left: auto;
     margin-right: auto;
     color: white;
+}
+
+/* ANIMATION */
+.grow {
+    animation: grow 0.3s ease-in-out forwards;
+}
+
+.shrink {
+    animation: shrink 0.3s ease-in-out forwards;
+}
+
+@keyframes grow {
+    from {
+        transform: scale(1.0);
+        opacity: 0.5;
+    }
+    to {
+        transform: scale(1.2);
+        z-index: 50;
+        opacity: 1.0;
+    }
+}
+
+@keyframes shrink {
+    from {
+        transform: scale(1.2);
+        z-index: 50;
+        opacity: 1.0;
+    }
+    to {
+        transform: scale(1.0);
+        z-index: 0;
+        opacity: 0.5;
+    }
 }
