--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@ body section{
 
 
 /*HEADER*/
+body section img#logo-header:hover{
+    cursor: pointer;
+}
+
 
 body section nav{
     width: 100%;
@@ -196,7 +200,6 @@ body section main div#header-novidades{
     display: inline-block;
 }
 
-
 body section main .header-novidades{
     font-family: 'Montserrat', sans-serif;
     color: #797979;
@@ -210,16 +213,32 @@ body section main p.header-novidades{
     margin-left: 30px;
 }
 
-body section main a.header-novidades{
+div#faixa{
     margin: 0;
     padding: 0;
-    width: 700px;
+    width: 600px;
+    height: 23px;
     text-decoration: none;
-    right: 30px;
+    position: absolute;
+    right: 0px;
     top: 15px;
     font-size: 18px;
     background-color: #3a3a3a;
-    text-align: right;
+    text-align: center;
+    justify-self: center;
+}
+
+
+body section main a.header-novidades{
+    margin: 0;
+    padding: 0;
+    width: 150px;
+    text-decoration: none;
+    right: 0px;
+    top: 15px;
+    font-size: 18px;
+    background-color: #2a2a2a;
+    text-align: center;
     justify-self: center;
 }
 body section main a.header-novidades:hover{
