--- a/Space_Comics - Copia/css/style.css
+++ b/Space_Comics - Copia/css/style.css
@@ -12,6 +12,7 @@ body {
     background-image: linear-gradient(rgba(0, 0, 0 ,1), rgba(0, 0, 0, 0)), url(https://wallpapercave.com/wp/wp3377763.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     position: relative;
 }
 
