--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,148 @@ body section main a.header-novidades:hover{
 }
 
 
+/*   ============TELA LOGIN=============   */
+.container-login {
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 120px;
+    background: rgb(100, 100, 100);
+}
+
+.wrap-login {
+    width: 960px;
+    border-radius: 10px;
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.login-pic {
+    width: 326px;
+}
+
+.login-form {
+    width: 50%;
+    padding: 20px 80px;
+    background: rgba(0, 0, 0, 0.466);
+}
+
+.login-form-img {
+    text-align: center;
+    display: block;
+    padding: 30px 0 54px 0;
+}
+
+.validate-input {
+    position: relative;
+}
+
+.wrap-input {
+    position: relative;
+    width: 100%;
+    z-index: 1;
+    margin-bottom: 20px;
+}
+
+.input {
+    font-size: 15px;
+    line-height: 1.5;
+    color: #fff;
+    display: block;
+    width: 100%;
+    background: rgba(75, 75, 75, 0.6);;
+    height: 50px;
+    border-radius: 25px;
+    padding: 0 30px 0 68px;
+    outline: none;
+    border: none;
+}
+
+.symbol-input {
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    border-radius: 25px;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding-left: 35px;
+    pointer-events: none;
+    color: #fff;
+    transition: all 0.4s;
+}
+
+.form-check-label{
+    color: #fff;
+}
+
+.container-login-form-btn {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 20px;
+}
+
+.login-form-btn {
+    font-size: 15px;
+    line-height: 1.5;
+    color: #fff;
+    text-transform: uppercase;
+    width: 70%;
+    height: 50px;
+    border-radius: 25px;
+    background: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 25px;
+    transition: all 0.4s;
+    outline: none !important;
+    border: none;
+}
+
+.login-form-btn:hover {
+    color: #fff;
+    background-color: #000;
+}
+
+.login-form-btn a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.txt2 {
+    font-size: 13px;
+    line-height: 1.5;
+    color: #999999;
+}
+
+a {
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 1.7;
+    color: #fff;
+    margin: 0px;
+    transition: all 0.4s;
+}
+
+.p-t-40 {
+    padding-top: 40px;
+}
+
+
+.text-center {
+    text-align: center!important;
+}
+
 
 /* FOOTER */
 
