--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
 body{
     margin: 0;
     padding: 0;
+    background-image: url('../img/background.jpg');
+    background-repeat: repeat-y;
+
 }
 
 body section{
@@ -164,7 +167,7 @@ body section main div#img-cabecalho-main{
     width: 100%;
     height: 50vh;
     background-image: url('../img/background.jpg');
-    background-size: cover;
+    background-repeat: repeat-y;;
     opacity: 0.3;
 }
 
@@ -449,28 +452,18 @@ a {
     text-align: center!important;
 }
 
-
-
-
-
-
-
-
-
-
-
 /* FOOTER */
 
 body section footer div#footer-marvel {
-    width: 100%;
-    background: rgb(52,52,52);
-    background: linear-gradient(rgba(23,23,23,1) 51%, rgba(52,52,52,1) 100%);
+    background: rgb(0, 0, 0);
+    opacity: 0.8;
     display: flex;
+    height: 40vh;
+    width: 100vw;
     align-items: center;
-    position: absolute;
-    bottom: 0;
     box-shadow: 0 0 15px 0;
-    
+    margin-top: 10%;
+    text-decoration: none;
 }
 
 body footer div a{
@@ -479,6 +472,20 @@ body footer div a{
     margin-right: auto;
     color: white;
     text-decoration: none;  
+}
+
+body section footer div img {
+    box-shadow: seashell;
+    opacity: 1;
+}
+
+body section footer div p {
+    margin-top: -20px;
+    font-size: 1em;
+    text-align: center;
+    color: white;
+    opacity: 1;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* ANIMATION */
