--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,16 @@
 body{
     margin: 0;
     padding: 0;
-    background-image: url('../img/background.jpg');
-    background-repeat: repeat-y;
-
+    
 }
 
-body section{
-    width: 100vw;
+body section#principal{
+    width: 100%;
     height: 100vh;
     background: rgb(52,52,52);
     background: linear-gradient(rgba(52,52,52,1) 51%, rgba(23,23,23,1) 100%);
+    position: relative;
+    overflow: hidden;
 }
 
 
@@ -165,9 +165,8 @@ main{
 
 body section main div#img-cabecalho-main{
     width: 100%;
-    height: 50vh;
+    height: 100vh;
     background-image: url('../img/background.jpg');
-    background-repeat: repeat-y;;
     opacity: 0.3;
 }
 
@@ -253,10 +252,12 @@ body section main a.header-novidades:hover{
     position: absolute;
     width: 100vw;
     height: 55vh;
+    margin: 0;
+    padding: 0;
     top: 160px;
     display: flex;
     align-items: center;
-    justify-content: center;
+
     overflow: hidden;
 }
 
@@ -264,18 +265,12 @@ body section main a.header-novidades:hover{
 #novidades-hqs img{
     width: 14vw;
     height: 40vh;
-    margin: 0px 10px 0 10px;
+    margin: 0px 18px 0px 2px;
     overflow: hidden;
     opacity: 0.5;
+
 }
 
-
-/*#novidades-hqs img:hover{
-    opacity: 1;
-    width: 18vw;
-    height: 50vh;
-    border: solid 8px #1a1a1a;
-}*/
 
 #novidades-hqs img:hover{
     cursor: pointer;
@@ -289,24 +284,30 @@ body section main a.header-novidades:hover{
 
 /* LOGIN */
 main#main-login{
-    position: relative;
-    align-items: center;
+    width: 100%;
+    height: 86vh;
+    display: flex;
     justify-content: center;
+    align-items: center;
 }
+
+
+
 /*   ============TELA LOGIN=============   */
 .container-login {
     width: 100%;
-    min-height: 100vh;
-
+    top: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: absolute;
+
 }
 
 
 body section main div#img-cabecalho-main-login{
     width: 100%;
-    height: 80vh;
+    height: 100%;
     background-image: url('../img/background.jpg');
     background-size: cover;
     opacity: 0.3;
@@ -452,17 +453,34 @@ a {
     text-align: center!important;
 }
 
+
+
 /* FOOTER */
 
+
+section#secundaria{
+    width: 100%;
+    background: rgb(52,52,52);
+    background: linear-gradient(rgba(52,52,52,1) 51%, rgba(23,23,23,1) 100%);
+    position: relative;
+    overflow: hidden;
+}
+
+footer{
+    background-color: transparent;
+    width: 100vw;
+    height: 50vh;
+    box-sizing: border-box;
+}
+
 body section footer div#footer-marvel {
-    background: rgb(0, 0, 0);
-    opacity: 0.8;
+    background: black;
     display: flex;
-    height: 40vh;
+    height: 50vh;
     width: 100vw;
     align-items: center;
-    box-shadow: 0 0 15px 0;
-    margin-top: 10%;
+
+
     text-decoration: none;
 }
 
@@ -480,13 +498,19 @@ body section footer div img {
 }
 
 body section footer div p {
-    margin-top: -20px;
+    margin-top: -40px;
     font-size: 1em;
     text-align: center;
     color: white;
+    margin-left: 25px;
     opacity: 1;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+
+
+
+
 
 /* ANIMATION */
 .grow {
