--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,9 @@ body section main a.header-novidades:hover{
 }
 
 
-#novidades-hqs{
+
+/*
+.container-slider{
     position: absolute;
     width: 100vw;
     height: 55vh;
@@ -262,7 +264,7 @@ body section main a.header-novidades:hover{
 }
 
 
-#novidades-hqs img{
+.container-slider img{
     width: 14vw;
     height: 40vh;
     margin: 0px 18px 0px 2px;
@@ -272,14 +274,14 @@ body section main a.header-novidades:hover{
 }
 
 
-#novidades-hqs img:hover{
+.container-slider img:hover{
     cursor: pointer;
     opacity: 1;
     transform: scale(1.3);
-    /*border: solid 8px #1a1a1a;*/
+
     z-index: 99;
 }
-
+*/
 
 
 /* LOGIN */
@@ -422,11 +424,17 @@ body section main div#area-login img{
 .login-form-btn:hover {
     color: #fff;
     background-color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .login-form-btn a {
     color: #fff;
     text-decoration: none;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .txt2 {
@@ -545,3 +553,99 @@ body section footer div p {
         opacity: 0.5;
     }
 }
+
+
+
+
+/* SLIDE HQS HOME */
+.pagina-container {
+    position: absolute;
+	width: 100%;
+    margin: auto;
+
+    top: 60px;
+    display: inline-flex;
+    padding: 0;
+}
+
+.container-slider {
+  padding: 80px 0px 0px 0;
+  overflow: hidden;
+}
+
+.container-slider .slide {
+  transform: scale(0.6);
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -o-transition: 0.3s;
+  outline: none !important;
+  opacity: 0.6;
+}
+
+.container-slider .slide.slick-center {
+    transform: scale(1);
+    opacity: 1;
+}
+
+.arrow{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 150px;
+    z-index: 99;
+}
+
+#arrow-anterior{
+    left: 400px;
+    background-image: url('../img/arrow_prev.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#arrow-proximo{
+    right: 400px;
+    background-image: url('../img/arrow_next.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+/*RESPONSIVO*/
+
+  @media only screen and (max-width: 640px) {
+
+
+  }   
+
+
+
+/* MEDIA */
+
+  @media only screen and (min-width: 641px) and (max-width: 1023px) {
+    .pagina-container .slide {
+      width: 33%;
+    }
+  }
+
+
+
+/* Grande */
+
+  @media only screen and (min-width: 1024px) and (max-width: 1440px) { 
+      
+    .pagina-container {
+      width: 100%;
+    }
+      
+  }
+
+
+/* João gordo */
+
+  @media only screen and (min-width: 1441px) {
+      
+    .pagina-container {
+      width: 100%px;
+    }
+            
+  }
