--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue&family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
 
 body{
     margin: 0;
@@ -9,7 +10,7 @@ body{
 
 body section#principal{
     width: 100%;
-    height: 100vh;
+    height: 1000px;
     background: rgb(52,52,52);
     background: linear-gradient(rgba(52,52,52,1) 51%, rgba(23,23,23,1) 100%);
     position: relative;
@@ -30,6 +31,7 @@ body section nav{
     height: 90px;
     background: rgb(52,52,52);
     background: linear-gradient(rgba(52,52,52,1) 51%, rgba(23,23,23,1) 100%);
+    /*background: #1c2d3f;*/
     position: relative;
     display: flex;
     align-items: center;
@@ -42,32 +44,39 @@ body section nav img#logo-header{
 }
 
 
-body section nav img#back-botao-login{
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    right: 0;
-}
 body section nav button#btn-login{
-    height: 100%;
+    height: 50px;
     width: 300px;
     position: absolute;
-    right: 0px;
+    right: 50px;
     align-self: center;
+    background-color: #891818;
     border: none;
-    background: transparent;
+    border-radius: 30px;
     color: white;
     font-family: 'Comic Neue', cursive;
     font-size: 25px;
     outline: none;
+    box-sizing: border-box;
+    transition: all 0.4s;
+    outline: none !important;
+    border: none;
 }
+
+body section nav button#btn-login:hover{
+    background-color: black;
+}
+
+body section nav button#btn-login a{
+    width: 100%;
+    height: 100%;
+}
+
 
 body section nav button#btn-login:hover{
     cursor: pointer;
     font-size: 27px;
     font-family: 'Comic Neue', cursive;
-    color: yellow;
 }
 
 
@@ -85,7 +94,7 @@ body section nav ul#cabecalho li{
     display: inline-block;
     font-family: 'Montserrat', sans-serif;
     font-size: 22px;
-    color: #797979;
+    color: white;
     margin: 0 30px 0 30px;
     padding: 0 10px 0 10px;
 }
@@ -96,16 +105,14 @@ body section nav ul#cabecalho li{
     display: inline-block;
     font-family: 'Montserrat', sans-serif;
     font-size: 22px;
-    color: #797979;
+    color: white;
     margin: 0 30px 0 30px;
     padding: 0 10px 0 10px;
     border: none;
     background-color: transparent;
   }
   
-.dropbtn:hover{
-    color: #891818;
-  }
+
 
   .dropdown {
     position: relative;
@@ -165,12 +172,10 @@ main{
 
 body section main div#img-cabecalho-main{
     width: 100%;
-    height: 100vh;
-    background-image: url('../img/background.jpg');
+    height: 130vh;
+    background-image: url('https://hdwallpaperim.com/wp-content/uploads/2017/08/23/468535-Magneto-Ororo_Monroe-X-23-Shatterstar-Mystique-The_Blob-Bishop-X-Men-Juggernaut-Cable-Rogue-archangel-Pixie-Omega_Red.jpg');
     opacity: 0.3;
 }
-
-
 
 
 
@@ -187,10 +192,8 @@ input#pesquisa{
     padding: 5px 0px 5px 20px;
     font-size: 18px;
     outline:none;
+    z-index: 100;
 }
-
-
-
 
 
 body section main div#header-novidades{
@@ -198,90 +201,37 @@ body section main div#header-novidades{
     margin: 0;
     padding: 0;
     position: absolute;
-    top: 150px;
+    top: 90px;
     display: inline-block;
+    
 }
 
 body section main .header-novidades{
-    font-family: 'Montserrat', sans-serif;
-    color: #797979;
-    font-size: 40px;
+    font-family: 'Bangers', cursive;
+    color: white;
+    font-size: 70px;
     position: absolute;
     margin: 0;
     padding: 0;
+    
 }
 
 body section main p.header-novidades{
-    margin-left: 30px;
-}
-
-div#faixa{
-    margin: 0;
-    padding: 0;
-    width: 600px;
-    height: 23px;
-    text-decoration: none;
-    position: absolute;
-    right: 0px;
-    top: 15px;
-    font-size: 18px;
-    background-color: #3a3a3a;
-    text-align: center;
-    justify-self: center;
+    width: 300px;
+    margin-left: 0px;
+    text-align: right;
+    padding: 0px 30px 0px 0px;
 }
 
 
-body section main a.header-novidades{
-    margin: 0;
-    padding: 0;
-    width: 150px;
-    text-decoration: none;
-    right: 0px;
-    top: 15px;
-    font-size: 18px;
-    background-color: #2a2a2a;
-    text-align: center;
-    justify-self: center;
-}
-body section main a.header-novidades:hover{
-    text-decoration: underline;
+section div#segundo-bloco-home{
+    width: 100%;
+    height: 100px;
+    background-color: #1c2d3f;
 }
 
 
 
-/*
-.container-slider{
-    position: absolute;
-    width: 100vw;
-    height: 55vh;
-    margin: 0;
-    padding: 0;
-    top: 160px;
-    display: flex;
-    align-items: center;
-
-    overflow: hidden;
-}
-
-
-.container-slider img{
-    width: 14vw;
-    height: 40vh;
-    margin: 0px 18px 0px 2px;
-    overflow: hidden;
-    opacity: 0.5;
-
-}
-
-
-.container-slider img:hover{
-    cursor: pointer;
-    opacity: 1;
-    transform: scale(1.3);
-
-    z-index: 99;
-}
-*/
 
 
 /* LOGIN */
@@ -328,11 +278,6 @@ body section main div#area-login img{
     width: 40%;
     height: 110%;
 }
-
-
-
-
-
 
 
 
@@ -469,7 +414,7 @@ a {
 section#secundaria{
     width: 100%;
     background: rgb(52,52,52);
-    background: linear-gradient(rgba(52,52,52,1) 51%, rgba(23,23,23,1) 100%);
+
     position: relative;
     overflow: hidden;
 }
@@ -482,7 +427,7 @@ footer{
 }
 
 body section footer div#footer-marvel {
-    background: black;
+    background: #0d0d0d;
     display: flex;
     height: 50vh;
     width: 100vw;
@@ -563,7 +508,7 @@ body section footer div p {
 	width: 100%;
     margin: auto;
 
-    top: 60px;
+    top: 10px;
     display: inline-flex;
     padding: 0;
 }
@@ -592,19 +537,19 @@ body section footer div p {
     width: 50px;
     height: 50px;
     position: absolute;
-    top: 150px;
+    top: 400px;
     z-index: 99;
 }
 
 #arrow-anterior{
-    left: 400px;
+    left: 450px;
     background-image: url('../img/arrow_prev.png');
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 #arrow-proximo{
-    right: 400px;
+    right: 450px;
     background-image: url('../img/arrow_next.png');
     background-size: cover;
     background-repeat: no-repeat;
