--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,21 @@ body{
 
 body section#principal{
     width: 100%;
-    height: 1000px;
+    height: 1100px;
     background: rgb(52,52,52);
     background: linear-gradient(rgba(52,52,52,1) 51%, rgba(23,23,23,1) 100%);
     position: relative;
     overflow: hidden;
 }
 
-
+body section#principal-login{
+    width: 100%;
+    height: 100vh;
+    background: rgb(52,52,52);
+    background: linear-gradient(rgba(52,52,52,1) 51%, rgba(23,23,23,1) 100%);
+    position: relative;
+    overflow: hidden;
+}
 
 
 /*HEADER*/
@@ -46,7 +53,7 @@ body section nav img#logo-header{
 
 body section nav button#btn-login{
     height: 50px;
-    width: 300px;
+    width: 15%;
     position: absolute;
     right: 50px;
     align-self: center;
@@ -93,9 +100,9 @@ body section nav ul#cabecalho li{
     list-style: none;
     display: inline-block;
     font-family: 'Montserrat', sans-serif;
-    font-size: 22px;
+    font-size: 18px;
     color: white;
-    margin: 0 30px 0 30px;
+    margin: 0 20px 0 20px;
     padding: 0 10px 0 10px;
 }
 
@@ -104,9 +111,9 @@ body section nav ul#cabecalho li{
     list-style: none;
     display: inline-block;
     font-family: 'Montserrat', sans-serif;
-    font-size: 22px;
+    font-size: 18px;
     color: white;
-    margin: 0 30px 0 30px;
+    margin: 0 20px 0 20px;
     padding: 0 10px 0 10px;
     border: none;
     background-color: transparent;
@@ -160,6 +167,67 @@ body section nav ul#cabecalho li:hover{
 
 
 
+#cabecalho-modal-menu{
+    padding: 0;
+    margin: 30px;
+    display: none;
+}
+
+.dropbtn{
+    list-style: none;
+    display: inline-block;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    color: white;
+    margin: 0 20px 0 20px;
+    padding: 0 10px 0 10px;
+    border: none;
+    background-color: transparent;
+  }
+  
+
+
+  .dropdown-modal {
+    position: relative;
+    display: inline-block;
+  }
+  
+
+  .dropdown-content-modal {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 180px;
+    right: 40px;
+    top: 40px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+
+  .dropdown-content-modal a {
+    color: #797979;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    background: rgb(52,52,52);
+    font-family: 'Montserrat', sans-serif;
+  }
+  
+
+  .dropdown-content-modal a:hover {
+      background-color: rgb(65, 65, 65)
+      
+    }
+  
+
+  .dropdown-modal:hover .dropdown-content-modal {
+    display: block;
+  }
+
+
+
+
 
 
 /*MAIN*/
@@ -175,24 +243,6 @@ body section main div#img-cabecalho-main{
     height: 130vh;
     background-image: url('https://hdwallpaperim.com/wp-content/uploads/2017/08/23/468535-Magneto-Ororo_Monroe-X-23-Shatterstar-Mystique-The_Blob-Bishop-X-Men-Juggernaut-Cable-Rogue-archangel-Pixie-Omega_Red.jpg');
     opacity: 0.3;
-}
-
-
-
-input#pesquisa{
-    height: 30px;
-    width: 400px;
-    background-color: rgba(52,52,52,1);
-    color: #797979;
-    border-radius: 30px;
-    border: none;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    padding: 5px 0px 5px 20px;
-    font-size: 18px;
-    outline:none;
-    z-index: 100;
 }
 
 
@@ -226,9 +276,50 @@ body section main p.header-novidades{
 
 section div#segundo-bloco-home{
     width: 100%;
-    height: 100px;
-    background-color: #1c2d3f;
+    height: 160px;
+    background-color: #891818;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
 }
+
+
+section div#segundo-bloco-home h2{
+    font-family: 'Bangers', cursive;
+    color: white;
+    font-size: 30px;
+    margin-left: 50px;
+}
+
+section div#segundo-bloco-home input{
+    width: 300px;
+    height: 50px;
+    margin-left: 30px;
+    padding: 0px 0px 0px 20px;
+    border: none;
+    border-radius: 5px 0px 0px 5px;
+    outline: none;
+    font-size: 18px;
+    color: #999999;
+}
+
+section div#segundo-bloco-home button{
+    width: 90px;
+    height: 50px;
+    border: none;
+    border-radius: 0px 5px 5px 0px;
+    outline: none;
+    font-size: 18px;
+    color: #999999;
+}
+
+section div#segundo-bloco-home button:hover{
+    background-color: black;
+    color: white;
+    cursor: pointer;
+}
+
 
 
 
@@ -540,24 +631,28 @@ body section footer div p {
     top: 400px;
     z-index: 99;
 }
+.arrow:hover{
+    cursor: pointer;
+}
 
 #arrow-anterior{
-    left: 450px;
+    left: 400px;
     background-image: url('../img/arrow_prev.png');
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 #arrow-proximo{
-    right: 450px;
+    right: 400px;
     background-image: url('../img/arrow_next.png');
     background-size: cover;
     background-repeat: no-repeat;
 }
 
+
 /*RESPONSIVO*/
 
-  @media only screen and (max-width: 640px) {
+@media only screen and (max-width: 640px) {
 
     body section main div#area-login {
         width: 100%;
@@ -615,7 +710,65 @@ body section footer div p {
         position: relative;
         display: flex;
     }
-  }   
+
+
+    /*HEADER MAIN*/
+    body section nav{
+        width: 100%;
+        height: 90px;
+        align-items: center;
+    }
+    body section nav button#btn-login{
+        display: none;
+    }
+    body section nav button#btn-login:hover{
+        font-size: 27px;
+    }
+    body section nav ul#cabecalho li{
+        display: none;
+    }
+    .dropbtn{
+        display: none;
+    }
+
+    #cabecalho-modal-menu{
+        display: inline-block;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+    }
+    .dropdown-modal{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        position: relative;
+    }
+
+    .dropbtn-modal{
+        height: 50px;
+        width: 100px;
+        position: absolute;
+        right: 15px;
+        align-self: center;
+        background-color: #891818;
+        border: none;
+        border-radius: 10px;
+        color: white;
+        font-family: 'Comic Neue', cursive;
+        font-size: 25px;
+        outline: none;
+        box-sizing: border-box;
+        transition: all 0.4s;
+        outline: none !important;
+        border: none;
+    }
+    .dropbtn-modal:hover{
+        background-color: black;
+    }
+
+}   
 
 
 
@@ -624,6 +777,62 @@ body section footer div p {
   @media only screen and (min-width: 641px) and (max-width: 1023px) {
     .pagina-container .slide {
       width: 33%;
+    }
+
+    /*HEADER MAIN*/
+    body section nav{
+        width: 100%;
+        height: 90px;
+        align-items: center;
+    }
+    body section nav button#btn-login{
+        display: none;
+    }
+    body section nav button#btn-login:hover{
+        font-size: 27px;
+    }
+    body section nav ul#cabecalho li{
+        display: none;
+    }
+    .dropbtn{
+        display: none;
+    }
+
+    #cabecalho-modal-menu{
+        display: inline-block;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+    }
+    .dropdown-modal{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        position: relative;
+    }
+
+    .dropbtn-modal{
+        height: 50px;
+        width: 100px;
+        position: absolute;
+        right: 15px;
+        align-self: center;
+        background-color: #891818;
+        border: none;
+        border-radius: 10px;
+        color: white;
+        font-family: 'Comic Neue', cursive;
+        font-size: 25px;
+        outline: none;
+        box-sizing: border-box;
+        transition: all 0.4s;
+        outline: none !important;
+        border: none;
+    }
+    .dropbtn-modal:hover{
+        background-color: black;
     }
   }
 
@@ -636,7 +845,7 @@ body section footer div p {
     .pagina-container {
       width: 100%;
     }
-      
+
   }
 
 
@@ -649,3 +858,4 @@ body section footer div p {
     }
             
   }
+
