--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 
 body section#principal{
     width: 100%;
-    height: 1100px;
+    height: 1050px;
     background: rgb(52,52,52);
     background: linear-gradient(rgba(52,52,52,1) 51%, rgba(23,23,23,1) 100%);
     position: relative;
@@ -47,7 +47,7 @@ body section nav{
 
 body section nav img#logo-header{
     padding: 0px 0px 0px 10px;
-    height: 40px;
+    height: 5em;
 }
 
 
@@ -282,6 +282,7 @@ section div#segundo-bloco-home{
     padding: 0;
     display: flex;
     align-items: center;
+    z-index: 150;
 }
 
 
@@ -651,9 +652,179 @@ body section footer div p {
 }
 
 
+
+
+
+
 /*RESPONSIVO*/
 
-@media only screen and (max-width: 640px) {
+
+
+@media only screen and (max-width: 414px){
+	body section main div#area-login {
+        width: 100%;
+        height: 480px;
+        background-color: rgba(0,0,0,0.5);
+    }
+    body section main div#img-cabecalho-main-login {
+        width: 100%;
+        height: 100%;
+        background-image: url(../img/background.jpg);
+        background-size: cover;
+        opacity: 0.3;
+    }
+    img {
+        vertical-align: middle;
+        width: 150px;
+        border-style: none;
+    }
+    body section footer div img {
+        box-shadow: seashell;
+        opacity: 1;
+    }
+    body section footer div p {
+        margin-top: -40px;
+        font-size: 10px;
+        text-align: center;
+        color: white;
+        margin-left: 100px;
+        opacity: 1;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    body section footer div#footer-marvel {
+        text-decoration: none;
+        flex-flow: wrap;
+    }
+    main#main-login {
+        width: 100%;
+        height: 86vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    main#main-login {
+    }
+    body section main div#area-login img {
+        width: 0px;
+        height: 0px;
+    }
+    .login-form {
+        width: 100%;
+        padding: 0px 20px;
+        background: rgba(0, 0, 0, 0.466);
+    }
+    main {
+        position: relative;
+        display: flex;
+    }
+
+
+    /*HEADER MAIN*/
+    body section nav{
+        width: 100%;
+        height: 90px;
+        align-items: center;
+    }
+    body section nav button#btn-login{
+        display: none;
+    }
+    body section nav button#btn-login:hover{
+        font-size: 27px;
+    }
+    body section nav ul#cabecalho li{
+        display: none;
+    }
+    .dropbtn{
+        display: none;
+    }
+
+    #cabecalho-modal-menu{
+        display: inline-block;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+    }
+    .dropdown-modal{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        position: relative;
+    }
+
+    .dropbtn-modal{
+        height: 50px;
+        width: 100px;
+        position: absolute;
+        right: 15px;
+        align-self: center;
+        background-color: #891818;
+        border: none;
+        border-radius: 10px;
+        color: white;
+        font-family: 'Comic Neue', cursive;
+        font-size: 25px;
+        outline: none;
+        box-sizing: border-box;
+        transition: all 0.4s;
+        outline: none !important;
+        border: none;
+    }
+    .dropbtn-modal:hover{
+        background-color: black;
+    }
+    body section nav img#logo-header{
+	height: 4em;
+    }
+
+    /*MAIN*/
+    .pagina-container{
+	margin-top: 120px;
+    }
+    main{
+    	height: 800px;
+    }
+    body section main div#img-cabecalho-main{
+    	height: 100%;
+    }
+    body section#principal{
+    	height: 1100px;
+    }
+    section div#segundo-bloco-home{
+	display: block;
+    	z-index: 10;
+	height: 210px;
+    }
+    body section main .header-novidades{
+	font-size: 55px;
+    }
+    body section main p.header-novidades{
+	width: 230px;
+    }
+    section div#segundo-bloco-home h2{
+	font-size: 20px;
+	margin-left: 30px;
+	margin-top: 0;
+	padding: 30px 0px 0px 0px
+    }
+    section div#segundo-bloco-home input#pesquisa{
+    	border-radius: 5px;
+	width: 250px;
+    }
+    section div#segundo-bloco-home button{
+	border-radius: 5px;
+  	margin-left: 30px;
+	margin-top: 20px;
+    }
+
+}
+
+
+
+
+
+@media only screen and (min-width: 415px) and (max-width: 640px) {
 
     body section main div#area-login {
         width: 100%;
@@ -768,6 +939,28 @@ body section footer div p {
     .dropbtn-modal:hover{
         background-color: black;
     }
+    body section nav img#logo-header{
+	height: 4em;
+    }
+
+    
+    .pagina-container{
+	margin-top: 120px;
+    }
+    main{
+    	height: 1000px;
+    }
+    body section main div#img-cabecalho-main{
+    	height: 100%;
+    }
+    body section#principal{
+    	height: 1250px;
+    }
+    section div#segundo-bloco-home{
+    	z-index: 10;
+    }
+
+
 
 }   
 
@@ -775,7 +968,7 @@ body section footer div p {
 
 /* MEDIA */
 
-  @media only screen and (min-width: 641px) and (max-width: 1023px) {
+@media only screen and (min-width: 641px) and (max-width: 1023px) {
     .pagina-container .slide {
       width: 33%;
     }
@@ -835,16 +1028,54 @@ body section footer div p {
     .dropbtn-modal:hover{
         background-color: black;
     }
-  }
+    
+
+
+    .pagina-container{
+	margin-top: 90px;
+    }
+    main{
+    	height: 700px;
+    }
+    body section main div#img-cabecalho-main{
+    	height: 100%;
+    }
+    body section#principal{
+    	height: 950px;
+    }
+    section div#segundo-bloco-home{
+    	z-index: 10;
+    }
+
+    section div#segundo-bloco-home button{
+    	margin-right: 30px;
+    }
+ }
 
 
 
 /* Grande */
 
-  @media only screen and (min-width: 1024px) and (max-width: 1440px) { 
+  @media only screen and (min-width: 1024px) and (max-width: 1365px) { 
       
     .pagina-container {
       width: 100%;
+    }
+
+        .pagina-container{
+	margin-top: 90px;
+    }
+    main{
+    	height: 800px;
+    }
+    body section main div#img-cabecalho-main{
+    	height: 100%;
+    }
+    body section#principal{
+    	height: 1050px;
+    }
+    section div#segundo-bloco-home{
+    	z-index: 10;
     }
 
   }
